--- a/result/2022-01-15.md
+++ b/result/2022-01-15.md
@@ -38,3 +38,4 @@
 38. [当萨摩耶玩123木头人](https://s.weibo.com//weibo?q=%23%E5%BD%93%E8%90%A8%E6%91%A9%E8%80%B6%E7%8E%A9123%E6%9C%A8%E5%A4%B4%E4%BA%BA%23&Refer=top) 116425
 39. [专家提示家庭聚集性感染风险](https://s.weibo.com//weibo?q=%23%E4%B8%93%E5%AE%B6%E6%8F%90%E7%A4%BA%E5%AE%B6%E5%BA%AD%E8%81%9A%E9%9B%86%E6%80%A7%E6%84%9F%E6%9F%93%E9%A3%8E%E9%99%A9%23&Refer=top) 113272
 40. [马龙首次在国际赛事出战混双](https://s.weibo.com//weibo?q=%23%E9%A9%AC%E9%BE%99%E9%A6%96%E6%AC%A1%E5%9C%A8%E5%9B%BD%E9%99%85%E8%B5%9B%E4%BA%8B%E5%87%BA%E6%88%98%E6%B7%B7%E5%8F%8C%23&Refer=top) 106117
+41. [陈立农在新鲜市开糖果屋](https://s.weibo.com//weibo?q=%23%E9%99%88%E7%AB%8B%E5%86%9C%E5%9C%A8%E6%96%B0%E9%B2%9C%E5%B8%82%E5%BC%80%E7%B3%96%E6%9E%9C%E5%B1%8B%23&Refer=top) 70289
